# morphik-core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .stats.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.gpu  Dockerfile.ui  KOYEB.md  PERFORMANCE_ANALYSIS.md  Procfile  README.md  SECURITY_FIXES.md  a.json  api.md  app.json  chat_memory_integration_tasks.md  colpali-trial.py  config.toml  databridge.toml  databridge_integration.py  docker-compose.minimal.yml  docker-compose.run.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  document_processor.py  fastapi.service  gemini_extractor.py  gemini_extractor_new.py  generate_local_uri.py  init.sql  install_and_start.ps1  install_and_start.sh  install_docker.ps1  install_docker.sh  make_stats.py  (+24 more)
.koyeb/: README.md  koyeb.yaml  worker.yaml
core/: agent.py  api.py  app_factory.py  auth_utils.py  config.py  databridge.toml  dependencies.py  design_agent.py  limits_utils.py  logging_config.py  openai_api.py  services_init.py  shared.py
docker/: docker-entrypoint.sh  morphik.toml.default  parse-postgres-uri.py  parse-postgres-uri.sh
docs/: MIGRATION_HONEYCOMB_TO_LOGFIRE.md  telemetry.md  workflows_implementation.md
ee/: config.py  db_router.py  llm_key_router.py
evaluations/: hotpot_ragas_eval.py
examples/: batch_operations.py  colpali.py  multi_app_user_scoping.py  openai_sdk_compatibility.py  prompt_overrides.py
llm-instructions/: insn.md
morphik-fast/: Cargo.toml
morphik-fast/src/: app.rs  auth.rs  config.rs  main.rs
morphik-fast/src/completion/: mod.rs  openai.rs
morphik-fast/src/database/: mod.rs  postgres.rs
morphik-fast/src/embedding/: mod.rs  openai.rs
morphik-fast/src/models/: api.rs  chunk.rs  mod.rs
morphik-fast/src/parser/: api.rs  mod.rs
morphik-fast/src/routes/: documents.rs  ingest.rs  mod.rs  retrieve.rs
morphik-fast/src/storage/: local.rs  mod.rs  s3.rs
morphik-fast/src/vector_store/: cache.rs  fast_multivector.rs  mod.rs  pgvector.rs  utils.rs
scripts/: clear_tables.sh  drop_legacy_acl_columns.py  hosted_service_sanity_check.py  migrate_multivector_embeddings.py  migrate_multivector_to_external_storage.py  sanity_test.sh  sanity_uri_tests.sh  (+3 more)
(+407 files in other folders)
