[package]
name = "morphik-fast"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Morphik core reimplemented in Rust for performance"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["json", "multipart"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }

# AWS S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Auth
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.9"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockall = "0.13"
